# Ticket_System

./: CMakeLists.txt  README.md  TicketSystem开发文档.md  debug文档.md  main.cpp
B+Tree/: BPT.h  BPTree.h  cache.h  data.h  multi_BPT.h
STLite/: algorithm.h  exceptions.hpp  map.hpp  myString.h  priority_queue.hpp  string.h  utility.hpp  vector.hpp
src/: myStruct.h  simpleScanner.h  trainSystem.h  userSystem.h
